# Estructura-de-datos

./: CMakeLists.txt  README.md  main.c
Act-repo 10/Actividad de sesion 10.0/: hola1.txt  sesion10.c
Act-repo 10/Actividad de sesion 10.1/: calififaciones.txt  promedio.c
Act-repo 10/Actividad de sesion 10.2/: contpalabras.c
Act-repo 10/Actividad de sesion 10.3/: main.c  palabras.txt
Act-repo 11/Act-1/: estructurasAutoreferenciales.c
Act-repo 13/Act-1/: main.c
Act-repo 14/Act-1/: ListaDobleEnca.c
Act-repo 15/Act-1/: apilando.c
Act-repo 16/Act-1/: datatypes.c  datatypes.h  stack.c  stack.h  teststack.c
Act-repo 16/Act-2/: datatypes.c  stack.c  stack.h  teststack.c
Act-repo 2/: CMakeLists.txt  main.c
Act-repo 20/Act-1/: test.c
Act-repo 3/: conteniedoFloat.c  main.c  sesion3.2.c
Act-repo 3.2/: main.c
Act-repo 4/: main.c
Act-repo 5/: Act 5  main.c
Act-repo 6/: main.c  sesion 6.1.c  sesion 6.2.c
Act-repo 7/: main.c
Act-repo 8/: actividad 8.1.c  actividad 8.2.c  main.c
Act-repo 9/: union.c
Act-repo 9/Actividad de sesion 9.1/: ejemplo_vec3.c  vec3.c  vec3.h
Act-repo 9/Actividad de sesion 9.2/: rgb_color.c  rgb_color.h  use_rgb_color.c
Act-repo-21/Act-1/: arbol.c
Act-repo-21/Act-2/: ValanceArbolBin.c
Act-repo-22/Act-1/: datatypes.c  datatypes.h  justset.c  set.c  set.h
Act-repo-23/Act-1/: main.c
Act-repo-23/Act-2/: main.c
Act-repo-24/Act-1/: CMakeLists.txt  priorityqueue.c  priorityqueue.h  test.c
Act-repo-24/Act-2/: CMakeLists.txt  priorityqueue.c  priorityqueue.h  usepq.c
Act-repo-26/: CMakeLists.txt
(+1 files in other folders)
