cmake_minimum_required(VERSION 3.24)
project(Estructura_de_datos_class C)

set(CMAKE_C_STANDARD 11)

include_directories("Act-repo 16/Act-1")
include_directories("Act-repo 16/Act-2")
include_directories("Act-repo 17/Act-1")
include_directories("Act-repo 19/Act-1")
include_directories("Act-repo 9/Actividad de sesion 9.1")
include_directories("Act-repo 9/Actividad de sesion 9.2")
include_directories("Act-repo 9/Actividad de sesion 9.2")
include_directories("Act-repo 9/Actividad de sesion 9.2")
include_directories("Act-repo 9/Actividad de sesion 9.2")

add_executable(Estructura_de_datos_class "Act-repo-21/Act-1/test.c" )
